2010-02-18  Abel Cheung  <abelcheung@gmail.com>

	* misc/tint-image.php:
	- New file, to tint score images using color specified by user.
	* wp-scorerender.php:
	- (scorerender_process_content) Always output image using
	  tint-image.php.

2010-02-18  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_get_upload_dir) Removed, now that WP 2.6 is required
	  and wp_upload_dir() is pretty much standardized since then.

2010-02-17  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- Move icon to images/ folder.
	* wp-scorerender.php, scorerender-admin.php:
	- Use plugins_url() where applicable.

2010-02-17  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, scorerender-class.php:
	- Rename DEBUG constant to avoid potential name clash.

2010-02-17  Abel Cheung  <abelcheung@gmail.com>

	* MUP magic file setting is replaced by directly entering registration
	  key.
	* wp-scorerender.php:
	- Increase database schema version.
	* notation/mup.php:
	- (set_magic_file) Removed.
	- (set_magic_file_hook) Renamed to more generic set_notation_action().

2010-02-17  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-utils.php:
	- Remove wp_parse_str() backport, as WP 2.2 is no more supported.

2010-02-17  Abel Cheung  <abelcheung@gmail.com>

	* Completely drop 'inverted' setting, introduce 'note_color' setting.
	  Admin related changes are complete. In the future colored score
	  fragments are generated on the fly instead of storing multiple copies
	  of image with different colors. This requires proper support of alpha
	  channel in PHP GD extension, which is completely broken in some
	  platforms, such as Debian / Ubuntu except very recent releases.
	* Now requires WP 2.6 due to usage of plugin_url().
	* wp-scorerender.php:
	- Increase database schema version.
	* scorerender-admin.php:
	- (scorerender_admin_head) Add color picker CSS.
	- (scorerender_admin_footer) New func, move existing JavaScript calls